# sp1-tape-looper

./: CHANGELOG.md  README.md
boards/teenageengineering/stem_player/: Kconfig.defconfig  Kconfig.stem_player  board.cmake  stem_player-pinctrl.dtsi  stem_player.dts  stem_player.yaml  stem_player_defconfig
docs/: index.html
firmware/: CMakeLists.txt  prj.conf
firmware/src/: main.c  sp1_emmc.c  sp1_emmc.h
firmware/zephyr-patches/: uac2-windows-fs-feedback.patch
